--- a/karl/views/static/ux2/css/responsive/768.less
+++ b/karl/views/static/ux2/css/responsive/768.less
@@ -79,7 +79,8 @@
         margin-top: 0.2em;
     }
     .sectionContainer {
-        .gradientBar(@grayLighter, @grayLight);
+        //.gradientBar(@grayLighter, @grayLight);
+        .gradientBar(#cfd5da, darken(#cfd5da, 30%));
         text-shadow: none;
         section {
             position: relative;
