--- a/karl/views/static/ux2/css/variables.less
+++ b/karl/views/static/ux2/css/variables.less
@@ -11,12 +11,14 @@
 /* Helping colors */
 @sectionBlue: @baseColor3;
 @sectionHeader: @baseColor3;
-@linkColor: #900; //saturate(@baseColor3, 30%);
+@linkColor: #3a74a9; //saturate(@baseColor3, 30%);
 @pushDownBg: #aaa;
 
 @infoColor: #edd596;
 @alertColor: #e15f41;
 
+@contentBgColor: #f0f2f4;
+@greenColor: #639332;
 
 // Typography
 @sansFontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
