--- a/karl/views/static/ux2/css/elements/portlets.less
+++ b/karl/views/static/ux2/css/elements/portlets.less
@@ -12,6 +12,10 @@
         text-transform: uppercase;
         font-size: 1.333;
         margin-top: 0;
+        text-align: center;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        border-bottom: @grayLight 1px dashed;
     }
     .label-inverse {
         background-color: @linkColor;
