fixed padding bug on single column layout

--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -6069,9 +6069,12 @@ section > header.header h2 {
     padding: 1.593137252em 0 2.666em;
   }
   .singleColumn section.main {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+    display: inline;
+    float: left;
+    width: 97.22222222222221%;
+    margin-left: 1.3888888888888888%;
+    margin-right: 1.3888888888888888%;
+    padding: 1.593137252em 0 2.666em;
   }
   section.main aside {
     width: 20.983em;
