--- a/karl/views/static/ux2/css/responsive/1024.less
+++ b/karl/views/static/ux2/css/responsive/1024.less
@@ -130,9 +130,8 @@
         padding: 1.593137252em 0 ((@space * 1em) * 2);
     }
     .singleColumn section.main {
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
+        .col(12);
+        padding: 1.593137252em 0 ((@space * 1em) * 2);
     }
     section.main aside {
         width: 20.983em;
