--- a/karl/views/static/ux2/css/variables.less
+++ b/karl/views/static/ux2/css/variables.less
@@ -14,8 +14,8 @@
 @linkColor: #3a74a9; //saturate(@baseColor3, 30%);
 @pushDownBg: #aaa;
 
-@infoColor: #edd596;
-@alertColor: #e15f41;
+@infoColor: #049cdb;
+@alertColor: #ffc40d;
 
 @contentBgColor: #f0f2f4;
 @greenColor: #639332;
@@ -60,10 +60,17 @@
 @white: #fff;
 @black: #000;
 //@grayLight: #999;
-@green: #46a546;
 @primaryButtonBackground: darken(@sectionBlue, 10%);
-@orange: #f89406;
 @olive: #B3CB9F;
+
+@blue: #049cdb;
+@green: #46a546;
+@red: #9d261d;
+@yellow: #ffc40d;
+@orange: #f89406;
+@pink: #c3325f;
+@purple: #7a43b6;
+
 @zindexDropdown:        1000;
 @zindexPopover:         1010;
 @zindexTooltip:         1020;
