Fix calendar event positioning bug on resize. Fixes LP #1045778

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -880,6 +880,18 @@
       width: 594px;
     }
 
+    // day + week views: we have height control too
+    .cal_hour_event {
+        height: 25px + 1;
+        .create {
+            height: 25px;
+        }
+    }
+    th .cal_time_label {
+        height: 25px * 2 + 1;
+    }
+
+
 
     /** =CALENDAR AGENDA VIEW
     ----------------------------------------------- */
